--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="weather_icon">weather_icon</string>
     <string name="enter_city">Enter City</string>
     <string name="get_forecast">Get Forecast</string>
+    <string name="low">Low</string>
+    <string name="high">High</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
