--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="high">High</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="date">Date</string>
+    <string name="humidity">Humidity(%)</string>
+    <string name="wind_speed">Wind Speed(mph)</string>
+    <string name="description">Description</string>
+    <string name="pressure">Pressure</string>
 </resources>
